# SpaghettiDungeonGenerator

./: .gitignore  LICENSE  README.md
Patterns/: cave.json  mechanical intermingled asteroids (n2).json  organised blocks.json  overlapping rooms.json  room cavern.json  (+3 more)
SpaghettiDungeonGen/: BoringAreaRemover.cpp  CMakeLists.txt  ConnectionNode.cpp  ConnectionNodeFilteredCollection.cpp  ConnectionNodeFilteredIterator.cpp  ConnectionNodeWrapper.cpp  ConnectivityGraphVertexIteratorWrapper.cpp  ConnectivityGrapher.cpp  Coord.cpp  Corridor.cpp  DRandom.cpp  EmptySpacePathfinder.cpp  EntropyGrid.cpp  FileManager.cpp  GameInterface.cpp  Islands.cpp  Map.cpp  Pattern.cpp  PatternIndex.cpp  PlacedRoom.cpp  PossibleDoor.cpp  RoomGenerator.cpp  RoomPlacer.cpp  RoomPrefab.cpp  Tile.cpp  TileWallData.cpp  WFCDungeonGenInterface.cpp  WFCTileType.cpp  WallOffNothingAreas.cpp  WaveFunctionCollapse.cpp  main.cpp
SpaghettiDungeonGen/include/: BoringAreaRemover.h  ConnectionNode.h  ConnectionNodeFilteredCollection.h  ConnectionNodeFilteredIterator.h  ConnectionNodeWrapper.h  ConnectivityGraphVertexIteratorWrapper.h  ConnectivityGrapher.h  Coord.h  Corridor.h  CorridorInfo.h  DRandom.h  Direction.h  DoorPosition.h  EmptySpacePathfinder.h  EntropyGrid.h  FileManager.h  GameInterface.h  Islands.h  Map.h  MapArray.h  OutputTile.h  Pattern.h  PatternIndex.h  PlacedRoom.h  PossibleDoor.h  Requirements.h  RoomGenerator.h  RoomPlacer.h  RoomPrefab.h  RoomType.h  Tile.h  TileType.h  TileWallData.h  WFCDungeonGenInterface.h  WFCTileType.h  WallOffNothingAreas.h  WaveFunctionCollapse.h
(+64 files in other folders)
